--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, VideoPlayerActivity!</string>
+    <string name="hello">Put your video url in the textbox</string>
     <string name="app_name">VideoPlayer</string>
     <string name="svideo">Start Video</string>
 
